Attempt to fix disappearing components

--- a/Kori/GlobalLogin.razor
+++ b/Kori/GlobalLogin.razor
@@ -4,7 +4,7 @@
 @using Microsoft.AspNetCore.Components.Authorization
 @using System.Security.Claims
 
-<style>
+<style class="kori-ignore">
     @@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 </style>
 
