--- a/Kori/GlobalLogin.razor.css
+++ b/Kori/GlobalLogin.razor.css
@@ -1,14 +1,4 @@
-﻿@font-face {
-  font-family: "Lato";
-  font-weight: 400;
-  src: url("/_content/Kori/fonts/Lato-Regular.ttf") format("truetype");
-}
-@font-face {
-  font-family: "Lato";
-  font-weight: 700;
-  src: url("/_content/Kori/fonts/Lato-Bold.ttf") format("truetype");
-}
-.login-component {
+﻿.login-component {
   display: flex;
   flex-direction: row-reverse;
   gap: 16px;
@@ -19,13 +9,7 @@
   font-weight: 400;
   line-height: 160%;
 }
-.login-component .login-component__toggle {
-  display: none;
-}
-.login-component .login-component__toggle.show {
-  display: block;
-}
-.login-component .login-component__toggle > * {
+.login-component .login-component > * {
   width: 32px;
   height: 32px;
   padding: 0;
@@ -34,23 +18,23 @@
   justify-content: center;
   align-items: center;
 }
-.login-component .login-component__toggle > * img {
+.login-component .login-component > * img {
   width: 20px;
   height: 20px;
   margin: 0;
 }
-.login-component .login-component__toggle .login-component__logged-out {
+.login-component .login-component .login-component__logged-out {
   background: var(--grey-900);
 }
-.login-component .login-component__toggle .login-component__logged-in {
+.login-component .login-component .login-component__logged-in {
   display: none;
   background: #36A42C;
   border-radius: 50%;
 }
-.login-component .login-component__toggle .login-component__logged-in.show {
+.login-component .login-component .login-component__logged-in.show {
   display: block;
 }
-.login-component .login-component__menu {
+.login-component__menu {
   width: 200px;
   display: none;
   animation: login_fadeIn 1000ms linear;
@@ -58,15 +42,15 @@
   padding: 16px 16px 0px 16px;
   background: white;
 }
-.login-component .login-component__menu.show {
+.login-component__menu.show {
   display: flex;
   flex-direction: column;
   gap: 16px;
 }
-.login-component .login-component__menu li, .login-component .login-component__menu button {
+.login-component__menu li, .login-component__menu button {
   color: var(--grey-700) !important;
 }
-.login-component .login-component__menu button {
+.login-component__menu button {
   padding: 16px 20px !important;
   border: 1px solid var(--grey-200, #DBDBDB) !important;
   border-radius: 0 !important;
@@ -76,100 +60,69 @@
   line-height: 160%;
   transition: 300ms ease-in-out;
 }
-.login-component .login-component__menu button:hover {
+.login-component__menu button:hover {
   background: var(--grey-50);
 }
-.login-component .login-component__menu button:active {
+.login-component__menu button:active {
   background: var(--white);
 }
-.login-component .login-component__actions {
+.login-component__actions {
   display: flex;
   flex-direction: column;
   gap: 16px !important;
 }
-.login-component .login-component__user {
+.login-component__user {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 16px;
 }
-.login-component .login-component__user .login-component__logout-btn {
+.login-component__user .login-component__logout-btn {
   padding: 0 !important;
   background: none !important;
   border: none !important;
   border-radius: 0 !important;
 }
-.login-component .login-component__user .login-component__logout-btn img {
+.login-component__user .login-component__logout-btn img {
   width: 20px;
   height: 20px;
 }
-.login-component .login-component__user .login-component__logout-btn:hover {
+.login-component__user .login-component__logout-btn:hover {
   opacity: 0.5;
 }
-.login-component .login-component__user .login-component__logout-btn:active {
+.login-component__user .login-component__logout-btn:active {
   opacity: 1;
 }
-.login-component .login-component__btn {
+.login-component__btn {
   display: flex;
   gap: 16px;
 }
-.login-component .login-component__btn img {
+.login-component__btn img {
   width: 10px;
   height: auto;
 }
-.login-component .login-component__language .language-list {
-  margin-top: 16px;
-  display: flex;
-  flex-direction: column;
-  max-height: 0px;
-  opacity: 0;
-  transition: all 1s ease-in-out;
-  -webkit-transition: all 1s ease-in-out;
-  -moz-transition: all 1s ease-in-out;
-  -ms-transition: all 1s ease-in-out;
-  -o-transition: all 1s ease-in-out;
-}
-.login-component .login-component__language .language-list.show {
-  padding-bottom: 16px;
-  max-height: 400px;
-  opacity: 1;
-}
-.login-component .login-component__language ul {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-  overflow-y: auto;
-  list-style: none;
-  width: 184px;
-  margin-top: 16px;
-  margin-right: -16px;
-  padding-right: 16px;
-}
-.login-component .login-component__language li {
-  list-style: none;
-}
-.login-component .login-component.show {
+.login-component.show {
   display: flex;
   gap: 12px;
 }
-.login-component .login-component .kori-buddy {
+.login-component .kori-buddy {
   width: 88px;
 }
-.login-component .login-component__container {
+.login-component__container {
   padding: 12px;
   background: var(--white);
   border-radius: 0 0 16px 16px;
 }
-.login-component .login-component h5, .login-component .login-component input, .login-component .login-component label, .login-component .login-component button {
+.login-component h5, .login-component input, .login-component label, .login-component button {
   font-family: "Love Ya Like A Sister" !important;
   font-size: 14px;
   color: var(--grey-900);
   font-weight: 400;
 }
-.login-component .login-component__header {
+.login-component__header {
   margin-bottom: 12px;
 }
-.login-component .login-component__input {
+.login-component__input {
   display: flex;
   gap: 8px;
   padding: 0;
@@ -177,22 +130,22 @@
   border: 10px solid transparent;
   border-image: url("/_content/Kori/borders/black-16.svg") 15 round;
 }
-.login-component .login-component__input input {
+.login-component__input input {
   padding: 0;
   border: none;
 }
-.login-component .login-component__input input::placeholder {
+.login-component__input input::placeholder {
   color: var(--grey-500);
 }
-.login-component .login-component__input input:-ms-input-placeholder {
+.login-component__input input:-ms-input-placeholder {
   color: var(--grey-500);
 }
-.login-component .login-component__keep {
+.login-component__keep {
   display: flex;
   gap: 8px;
   font-size: 14px;
 }
-.login-component .login-component__keep input {
+.login-component__keep input {
   margin-top: 6px;
   width: 14px;
   height: 14px;
@@ -200,17 +153,17 @@
   border-image: url("/_content/Kori/borders/black-8.svg") 15 round;
   border-radius: 2px;
 }
-.login-component .login-component__keep input::before {
+.login-component__keep input::before {
   background: var(--grey-700);
   box-shadow: var(--grey-700);
 }
-.login-component .login-component__actions {
+.login-component__actions {
   display: flex;
   flex-direction: column;
   gap: 4px;
   margin-top: 12px;
 }
-.login-component .login-component__actions button {
+.login-component__actions button {
   width: 100%;
   padding: 0;
   background: none;
@@ -218,7 +171,7 @@
   border-image: url("/_content/Kori/borders/black-8.svg") 15 round;
   font-style: normal;
 }
-.login-component .login-component__actions button.login-component__btn {
+.login-component__actions button.login-component__btn {
   width: calc(100% - 4px);
   height: calc(100% - 4px);
   margin: 0 auto;
@@ -226,17 +179,17 @@
   border-radius: 8px;
   border-image-outset: 2px;
 }
-.login-component .login-component__actions button.login-component__btn:hover {
+.login-component__actions button.login-component__btn:hover {
   background: var(--orange-200) !important;
   filter: opacity(1) !important;
 }
-.login-component .login-component__actions button.login-component__btn:active {
+.login-component__actions button.login-component__btn:active {
   background: var(--orange-500) !important;
 }
-.login-component .login-component__actions button.login-component__cancel:hover {
+.login-component__actions button.login-component__cancel:hover {
   filter: opacity(0.6) !important;
 }
-.login-component .login-component__actions button.login-component__cancel:active {
+.login-component__actions button.login-component__cancel:active {
   filter: opacity(1) !important;
 }
 
