--- a/Kori/LanguageSelector.razor.scss
+++ b/Kori/LanguageSelector.razor.scss
@@ -1,16 +1,23 @@
 .login-component__language {
+    color: white;
+
     .language-list {
         margin-top: 16px;
         display: flex;
         flex-direction: column;
-        max-height: 0px;
+        max-height: 0;
+        transition: all 1000ms ease-in-out;
         opacity: 0;
-        transition: all 1s ease-in-out;
+    }
 
-        &.show {
-            padding-bottom: 16px;
+    &.show {
+        height: fit-content;
+        padding-bottom: 16px;
+
+        .language-list {
             max-height: 400px;
             opacity: 1;
+            transition: all 1000ms ease-in-out;
         }
     }
 
@@ -28,5 +35,11 @@
 
     li {
         list-style: none;
+    }
+
+    button {
+        padding: 8px 0;
+        background: none;
+        color: white;
     }
 }
