--- a/Kori/LanguageSelector.razor
+++ b/Kori/LanguageSelector.razor
@@ -1,22 +1,22 @@
 @using System.Net.Http.Json
 @using System.Globalization
 
-<div class="login-component__language">
+<div class="login-component__language @(ShowLanguages ? "show" : "")">
     <div class="language-list">
         <p class="list-header">Select your language:</p>
         <ul>
-            @if (selectedLanguage != null)
+            @* @if (selectedLanguage != null)
             {
                 <li>
-                    <button class="selected">@selectedLanguage.DisplayName</button>
+                    <button class="login-component__btn selected">@selectedLanguage.DisplayName</button>
                 </li>
-            }
+            } *@
             @if (Languages != null)
             {
                 @foreach (var language in Languages)
                 {
                     <li>
-                        <button @onclick=@(() => ChangeLanguage(language))>
+                        <button class="login-component__btn" @onclick=@(() => ChangeLanguage(language))>
                             @language.DisplayName
 
                             @if (language.DisplayName != language.NativeName)
@@ -41,6 +41,7 @@
 
 @code {
     [Parameter] public EventCallback<Language> LanguageChanged { get; set; }
+    [Parameter] public bool ShowLanguages { get; set; } = false;
     string? SelectedLanguageId { get; set; }
     Language? selectedLanguage;
     List<Language>? Languages { get; set; }
