--- a/Kori/LanguageSelector.razor.css
+++ b/Kori/LanguageSelector.razor.css
@@ -1,8 +1,8 @@
 ﻿.login-component__language {
   color: white;
+  margin-top: 8px;
 }
 .login-component__language .language-list {
-  margin-top: 16px;
   display: flex;
   flex-direction: column;
   max-height: 0;
@@ -24,7 +24,7 @@
   gap: 8px;
   overflow-y: auto;
   list-style: none;
-  width: 184px;
+  width: 100%;
   margin-top: 16px;
   margin-right: -16px;
   padding-right: 16px;
@@ -36,4 +36,9 @@
   padding: 8px 0;
   background: none;
   color: white;
+  font-family: "Encode Sans Semi Expanded";
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 160%;
+  color: var(--grey-50);
 }
